@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          - fix incorrect warning messages when two files are added with the
+            same filename
 
 0.009     2014-11-16 04:02:48Z
           - bump required version of Term::ANSIColor for bright colours
